src/objects/Ticket__c.object
<CustomObject>
    <description>Ticket is a request to build or fix functionality</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_of_Work__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Estimated days to finish this ticket</description>
        <label>Estimated Days of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>&quot;Sev 3&quot;</defaultValue>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sev 0</fullName>
                </value>
                <value>
                    <fullName>Sev 1</fullName>
                </value>
                <value>
                    <fullName>Sev 2</fullName>
                </value>
                <value>
                    <fullName>Sev 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>READY</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>BLOCKED</fullName>
                </value>
                <value>
                    <fullName>DONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>